# pge

./: Cargo.toml
.github/workflows/: rust.yml
benches/: bench_main.rs  phycis.rs  process_nodes.rs  topo_sort_nodes.rs
docs/: pge.drawio  pge.md
editor/: Cargo.toml
editor/src/: main.rs
examples/boxshape/: Cargo.toml
examples/boxshape/src/: main.rs
examples/cube/: Cargo.toml
examples/cube/src/: main.rs
examples/fps/: Cargo.toml
examples/fps/src/: lib.rs  main.rs
examples/todo/: Cargo.toml
examples/todo/src/: main.rs
experiments/ffi/: Cargo.toml
experiments/ffi/src/: lib.rs
experiments/js/: tsconfig.json
experiments/js/src/: pge.ts
experiments/xr/: Cargo.toml  build.sh  readme.md
experiments/xr/android/: settings.gradle.kts
experiments/xr/android/app/: build.gradle.kts
experiments/xr/android/app/src/main/: AndroidManifest.xml
experiments/xr/android/app/src/main/java/com/example/myapplication/: MainActivity.kt
experiments/xr/android/app/src/main/res/values/: strings.xml
experiments/xr/android/gradle/: libs.versions.toml
experiments/xr/android/gradle/wrapper/: gradle-wrapper.properties
experiments/xr/src/: lib.rs
ffi/: Cargo.toml
ffi/src/: lib.rs
impl/android/: Cargo.toml
impl/android/src/: lib.rs
impl/apple/: Cargo.toml
js/: bun.lockb  fps.ts  package-lock.json  package.json  pge.ts
js/src/: fps.ts
pge/: Cargo.toml
pge/src/: lib.rs
src/: acumalator.rs  animation.rs  animation.wgsl  animation_manager.rs  animation_pipeline.rs  app.rs  arena.rs  buffer.rs  buffers.rs  camera.rs  collision_detection.rs  compositor.rs  debug.rs  draw_queue.rs  engine.rs  engine_state.rs  entity.rs  experiment.rs  fragment.wgsl  gltf.rs  gui.rs  hardware.rs  idgen.rs  input.rs  interface.rs  internal.rs  internal_types.rs  large_state_test.rs  lib.rs  location.rs  log.rs  math.rs  mock_hardware.rs  node_editor.rs  node_manager.rs  physics.rs  qhull.rs  raw_types.rs  renderer.rs  root.rs  (+22 more)
src/buffers/: grouped_buffer.rs  mod.rs  types.rs
src/shaders/: 3d_shader.wgsl  animation.wgsl  gui_shader.wgsl  shader.wgsl
src/wgpu/: buffers.rs  hardware.rs  mod.rs  renderer.rs  types.rs  vertex.wgsl  wgpu_types.rs
