workspace = { members = ["examples/fps", "impl/android", "impl/apple", "impl/windows", "pge"] }

[package]
name = "pgecore"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
anyhow = "1"
bytemuck = { version = "1", features = ["derive"] }
glam = "0.29"
ttf-parser = "0.21.1"
lyon = "1.0.1"
image = "0.25"
gltf = "1"
colored = "2"

[[bin]]
name = "large_state_test"
path = "src/large_state_test.rs"
