workspace = { members = [ "editor","examples/*"] }

[package]
name = "pge"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
winit = { version = "0.30", optional = true }
wgpu = { version = "0.20", optional = true }
anyhow = "1"
bytemuck = { version = "1.15", features = ["derive"] }
glam = "0.27.0"
ttf-parser = "0.21.1"
lyon = "1.0.1"
image = "0.25"
gltf = "1"
colored = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1" }
futures = "0.3"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"]  }
rand = "0.8"

[features]
wgpu_winit = ["wgpu", "winit"]


[[bench]]
name = "topo_sort_nodes"
harness = false