[package]
name = "pge_editor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
pge = { path = "../" }
anyhow = "1"
glam = "0.27.0"
log = "0.4"
clap = { version = "4", features = ["derive"] }